@@ -1,9 +1,7 @@
- {$form1.javascript}
- <form {$form1.attributes}>
  <table id="ListTable">
 	<tr class="ListHeader">
 		<td class="FormHeader" colspan="2">
-			<img src='./img/icones/16x16/info.gif'>&nbsp;&nbsp;{$headerMenu_title}
+			<img src='./img/icones/16x16/star_blue.gif'>&nbsp;&nbsp;{$headerMenu_title}
 		</td>
 	</tr>
  	<tr class="list_one">
@@ -22,9 +20,9 @@
  		<td class="FormRowField">{$headerMenu_infos}</td>
  		<td class="FormRowValue">{$module_infos}</td>
  	</tr>
+ 	{if $form1.install.html || $form1.list.html}
  	<tr class="list_one">
  		<td colspan="2" align="center">
- 			{$form1.install.html}
  			{if $output1}
  				{$output1}<br>
  			{/if}
@@ -37,11 +35,26 @@
  			{if $output4}
  				{$output4}<br>
  			{/if}
- 		</td>
- 	</tr> 			 		 	
+ 			 <form {$form1.attributes}>	
+	 		<br>&nbsp;{$form1.install.html}&nbsp{$form1.list.html}<br>
+	 		 {$form1.hidden}
+	 		 </form>
+  		</td>
+ 	</tr>
+ 	{/if}
+ 	{if $form2.list.html}
+	 	<tr class="list_one">
+	 		<td colspan="2" align="center">
+	 			<form {$form2.attributes}>
+	 			<br>
+	 			{$form2.list.html}
+	 			 </form>
+	 		</td>
+	 	</tr>
+	 {/if}		 		 	
  </table>
- {$form1.hidden}
-</form>
+
+
 <br><br>
  {section name=elem loop=$elemArr}
  	{$form.javascript}
@@ -49,7 +62,7 @@
 	  <table id="ListTable">
 		<tr class="ListHeader">
 			<td class="FormHeader" colspan="2">
-				<img src='./img/icones/16x16/info.gif'>&nbsp;&nbsp;{$headerMenu_title2}
+				<img src='./img/icones/16x16/star_green.gif'>&nbsp;&nbsp;{$headerMenu_title2}
 			</td>
 		</tr>
 	 	<tr class="list_one">
@@ -78,7 +91,7 @@
 	 	</tr>
 	 	{if $elemArr[elem].upgrade_choice}
 		 	<tr class="list_one">
-		 		<td colspan="2" align="center">{$form.upgrade.html}</td>
+		 		<td colspan="2" align="center">{$form.upgrade.html}&nbsp{$form.list.html}</td>
 		 	</tr>
 		 {/if}	 		 	
 	 </table>
